--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168.1.250;Database=CRUDApi;Trusted_Connection=True;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
